Integrating netrix